[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Gun.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 3.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
jump_speed = 6
max_speed = 10.0

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CameraHolder" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraHolder"]

[node name="Hands" type="Spatial" parent="CameraHolder/Camera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.539, -0.234, -1.473 )

[node name="Gun" parent="CameraHolder/Camera/Hands" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="ShootCast" type="RayCast" parent="CameraHolder/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="CrouchTween" type="Tween" parent="."]
